5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1649_2446.log
== TEST (2019-04-11 18:24:59) 
-- CODE:
senha=float(input("digite uma senha:      "))
x=senha//100000
print(x)

-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:25:40) 
-- CODE:
senha=float(input("digite uma senha:      "))
x=senha//100000
y=(senha//100000)%10

print(x)
print(y)
-- OUTPUT:
0.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:25:48) 
-- CODE:
senha=float(input("digite uma senha:      "))
x=senha//100000
y=(senha//10000)%10

print(x)
print(y)
-- OUTPUT:
0.0
8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:34:57) 
-- CODE:
senha=float(input("digite uma senha:      "))
x=senha//100000    #primeiro numero
y=(senha//10000)%10   #segundo numero
z=(senha//1000)%10    #terceiro numero
a=(senha//100)%10     #quarto numero
b=(senha//10)%10     #quinto numero
c=senha%10           #sexto numero
if((y+a+c)%(x+z+b)!=0):
	print("senha invalida")
	else:
		print("acesso liberado")
	
-- EXECUTION TIME:
0.210906
-- ERROR:
  File "/home/codebench/codes/1649/2446/main.py", line 10
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:34:58) 
-- CODE:
senha=float(input("digite uma senha:      "))
x=senha//100000    #primeiro numero
y=(senha//10000)%10   #segundo numero
z=(senha//1000)%10    #terceiro numero
a=(senha//100)%10     #quarto numero
b=(senha//10)%10     #quinto numero
c=senha%10           #sexto numero
if((y+a+c)%(x+z+b)!=0):
	print("senha invalida")
	else:
		print("acesso liberado")
	
-- EXECUTION TIME:
0.181978
-- ERROR:
  File "/home/codebench/codes/1649/2446/main.py", line 10
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:35:07) 
-- CODE:
senha=float(input("digite uma senha:      "))
x=senha//100000    #primeiro numero
y=(senha//10000)%10   #segundo numero
z=(senha//1000)%10    #terceiro numero
a=(senha//100)%10     #quarto numero
b=(senha//10)%10     #quinto numero
c=senha%10           #sexto numero
if((y+a+c)%(x+z+b)!=0):
	print("senha invalida")
	else:
		print("acesso liberado")
	
-- ERROR:
File "XXXX", line 10
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:35:18) 
-- CODE:
senha=float(input("digite uma senha:      "))
x=senha//100000    #primeiro numero
y=(senha//10000)%10   #segundo numero
z=(senha//1000)%10    #terceiro numero
a=(senha//100)%10     #quarto numero
b=(senha//10)%10     #quinto numero
c=senha%10           #sexto numero
if((y+a+c)%(x+z+b)!=0):
	print("senha invalida")
else:
	print("acesso liberado")
	
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:35:33) 
-- CODE:
senha=float(input("digite uma senha:      "))
x=senha//100000    #primeiro numero
y=(senha//10000)%10   #segundo numero
z=(senha//1000)%10    #terceiro numero
a=(senha//100)%10     #quarto numero
b=(senha//10)%10     #quinto numero
c=senha%10           #sexto numero
if((y+a+c)%(x+z+b)!=0):
	print("senha invalida")
else:
	print("acesso liberado")
	
-- EXECUTION TIME:
0.240447
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:38:31) 
-- CODE:
senha=float(input("digite uma senha:      "))
x=senha//100000    #primeiro numero
y=(senha//10000)%10   #segundo numero
z=(senha//1000)%10    #terceiro numero
a=(senha//100)%10     #quarto numero
b=(senha//10)%10     #quinto numero
c=senha%10           #sexto numero
if((y+a+c)%(x+z+b)!=0):
	print("senha invalida")
else:
	print("acesso liberado")
	
-- EXECUTION TIME:
0.162092
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:15:24) 
-- CODE:
senha=float(input("digite uma senha:      "))
x=senha//100000    #primeiro numero
y=(senha//10000)%10   #segundo numero
z=(senha//1000)%10    #terceiro numero
a=(senha//100)%10     #quarto numero
b=(senha//10)%10     #quinto numero
c=senha%10           #sexto numero
if((y+a+c)%(x+z+b)!=0):
	print("senha invalida")
else:
	print("acesso liberado")
	
-- EXECUTION TIME:
0.206398
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
